@@ -14,3 +14,18 @@ AUTO_SIGNUP = getattr(settings, "SOCIALACCOUNT_AUTO_SIGNUP", True)
 # the user is copied locally into django-avatar at signup.
 AVATAR_SUPPORT = getattr(settings, "SOCIALACCOUNT_AVATAR_SUPPORT",
                          'avatar' in settings.INSTALLED_APPS)
+
+
+# Provider specific settings
+PROVIDERS = getattr(settings, "SOCIALACCOUNT_PROVIDERS",
+                    { 'openid': 
+                      { 'SERVERS': 
+                        [dict(id='yahoo',
+                              name='Yahoo',
+                              openid_url='http://me.yahoo.com'),
+                         dict(id='hyves',
+                              name='Hyves',
+                              openid_url='http://hyves.nl'),
+                         dict(id='google',
+                              name='Google',
+                              openid_url='https://www.google.com/accounts/o8/id')]}})
