@@ -1,12 +1,12 @@
 from allauth.socialaccount import providers
-from allauth.socialaccount.providers.base import Provider, ProviderAccount
-
+from allauth.socialaccount.providers.base import ProviderAccount
+from allauth.socialaccount.providers.oauth.models import OAuthProvider
 
 class LinkedInAccount(ProviderAccount):
     pass
 
 
-class LinkedInProvider(Provider):
+class LinkedInProvider(OAuthProvider):
     id = 'linkedin'
     name = 'LinkedIn'
     package = 'allauth.socialaccount.providers.linkedin'
