@@ -13,7 +13,7 @@
 
 {% if not user.is_authenticated %}
 
-{% if allauth.socialaccount_enabled  %}
+{% if socialaccount.providers  %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
 of your existing third party accounts. Or, <a 
 href="{{ signup_url }}">sign up</a> for a {{site_name}} account and sign in
